Subindo alterações para SEO

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html>
-<html lang="">
+<!doctype html>
+<html lang="pt">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A partir dos dados das operações de importação e exportação, a Dsolutionscom gera informação estratégica que orienta decisões mais eficientes e consistentes."
+    />
     <title>Dsolutionscom - Inteligência de dados aplicado ao comércio exterior</title>
   </head>
   <body>
